@@ -1,3 +1,14 @@
+2004-09-23  John Sullivan  <sullivan@apple.com>
+
+        Reviewed by Ken.
+
+        - fixed <rdar://problem/3527840> reproducible crash at johnbrown.v32.qikker.com 
+        (nil-deref in NodeImpl::dispatchEvent)
+
+        * khtml/xml/dom_nodeimpl.cpp:
+        (NodeImpl::dispatchEvent):
+        guard against document or document->document() being nil
+
 2004-09-23  Darin Adler  <darin@apple.com>
 
         Reviewed by Ken.
